--- a/stile/stile.css
+++ b/stile/stile.css
@@ -16,7 +16,7 @@ body {
 }
 
 .banner {
-    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url(images/banner.png);
+    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url(/images/banner.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
@@ -166,7 +166,7 @@ course-content .modules-list .module {
 #transform-world {
     height: 560px;
     background-size: cover;
-    background-image: url(images/woman-code.png);
+    background-image: url(/images/woman-code.png);
     background-attachment: fixed;
     border-top: 1px solid #33A8DB80;
     border-bottom: 1px solid #33A8DB80;
